Completed mobile view

--- a/css/index.css
+++ b/css/index.css
@@ -137,26 +137,6 @@ body {
   font-family: 'Ubuntu', sans-serif;
   color: #5E6164;
 }
-.content-nav {
-  background-color: cyan;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  align-content: center;
-}
-.content-nav h1 {
-  font-size: 4rem;
-  margin: 1rem auto;
-}
-.content-nav nav {
-  margin: 1.4rem auto;
-}
-.content-nav nav a {
-  text-decoration: none;
-  color: darkblue;
-  font-size: 1.5rem;
-  margin: auto 1.6rem;
-}
 h1,
 h2,
 h3,
@@ -180,6 +160,26 @@ p {
   width: 100%;
   margin: 0 auto;
 }
+.content-nav {
+  background-color: cyan;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+}
+.content-nav h1 {
+  font-size: 4rem;
+  margin: 1rem auto;
+}
+.content-nav nav {
+  margin: 1.4rem auto;
+}
+.content-nav nav a {
+  text-decoration: none;
+  color: #23293B;
+  font-size: 1.5rem;
+  margin: auto 1.6rem;
+}
 footer {
   color: #22283B;
   background: #f4f4f4;
@@ -196,6 +196,9 @@ footer {
 .home .intro p {
   padding: 0 15px;
 }
+.home .banner {
+  width: 100%;
+}
 .home .space-images {
   display: flex;
   flex-wrap: wrap;
@@ -206,6 +209,18 @@ footer {
   margin: 20px 2.5%;
   border-radius: 20px;
   height: 100%;
+}
+@media (max-width: 500px) {
+  .home .space-images img {
+    width: 100%;
+    margin: auto;
+  }
+}
+@media (max-width: 500px) {
+  .home .sky,
+  .home .launch {
+    display: none;
+  }
 }
 .home .visit-planets {
   padding: 15px;
@@ -223,8 +238,20 @@ footer {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 500px) {
+  .home .walk {
+    width: 100%;
+    flex-direction: column-reverse;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text {
+    width: 100%;
+    justify-content: center;
+  }
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
@@ -232,9 +259,31 @@ footer {
 .home .walk .walk-text p {
   margin-bottom: 26px;
 }
+.home .walk .walk-text .btn {
+  border: none;
+  color: white;
+  background-color: #23293B;
+  width: 10rem;
+  height: 3.5rem;
+  font-size: 2rem;
+  border-radius: 0.5rem;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text .btn {
+    width: 100%;
+    height: 20%;
+    margin: auto;
+  }
+}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-img {
+    width: 100%;
+    margin: auto;
+  }
 }
 .home .walk .walk-img img {
   width: 100%;
