--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,16 @@
 // Mixins Here
+
+.button() {
+    border: none;
+    color: white;
+    background-color: #23293B;
+    width: 10rem;
+    height: 3.5rem;
+    font-size: 2rem;
+    border-radius: 0.5rem;
+}
+
+.margins-mobile() {
+    width: 85%;
+    margin: auto;
+}
