--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,22 @@
 // Navigation code here
+
+.content-nav {
+    background-color: cyan;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    h1 {
+      font-size: 4rem;
+      margin: 1rem auto;
+    }
+    nav {
+      margin: 1.4rem auto;
+      a {
+        text-decoration: none;
+        color: #23293B;
+        font-size: 1.5rem;
+        margin: auto 1.6rem;
+      }
+    }
+  }
