--- a/less/home-page.less
+++ b/less/home-page.less
@@ -14,6 +14,10 @@
   
   }
 
+  .banner {
+    width: 100%;
+  }
+
   .space-images {
     display: flex;
     flex-wrap: wrap;
@@ -24,7 +28,19 @@
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+
+      @media(max-width: @mobile) {
+        width: 100%;
+        margin: auto;
+      } 
     }
+  }
+
+
+  .sky, .launch {
+    @media(max-width: @mobile) {
+      display: none;
+    } 
   }
 
   .visit-planets {
@@ -46,8 +62,18 @@
     display: flex;
     justify-content: center;
 
+    @media(max-width: @mobile) {
+      width: 100%;
+      flex-direction: column-reverse;
+    }  
+
     .walk-text {
       width: 50%;
+
+      @media(max-width: @mobile) {
+        width: 100%;
+        justify-content: center;
+      } 
 
       h3 {
         margin-bottom: 10px;
@@ -58,6 +84,12 @@
       }
 
       .btn {
+        .button();
+        @media(max-width: @mobile) {
+          width: 100%;
+          height: 20%;
+          margin: auto;
+        } 
       }
     }
 
@@ -65,6 +97,11 @@
       width: 46%;
       margin-left: 4%;
       
+      @media(max-width: @mobile) {
+        width: 100%;
+        margin: auto;
+      } 
+
       img {
         width: 100%;
         height: auto;
