--- a/css/index.css
+++ b/css/index.css
@@ -166,6 +166,9 @@ p {
   flex-direction: column;
   align-items: center;
   align-content: center;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 .content-nav h1 {
   font-size: 4rem;
@@ -179,6 +182,9 @@ p {
   color: #23293B;
   font-size: 1.5rem;
   margin: auto 1.6rem;
+}
+.underNav {
+  height: 10rem;
 }
 footer {
   color: #22283B;
@@ -267,6 +273,7 @@ footer {
   height: 3.5rem;
   font-size: 2rem;
   border-radius: 0.5rem;
+  transition: background-color 2s;
 }
 @media (max-width: 500px) {
   .home .walk .walk-text .btn {
@@ -274,6 +281,10 @@ footer {
     height: 20%;
     margin: auto;
   }
+}
+.home .walk .walk-text .btn:hover {
+  color: #23293B;
+  background-color: white;
 }
 .home .walk .walk-img {
   width: 46%;
