--- a/less/home-page.less
+++ b/less/home-page.less
@@ -84,12 +84,17 @@
       }
 
       .btn {
-        .button();
+        .button(10rem, 3.5rem, 2rem);
         @media(max-width: @mobile) {
           width: 100%;
           height: 20%;
           margin: auto;
         } 
+      }
+
+      .btn:hover {
+        color: #23293B;
+        background-color: white;
       }
     }
 
