--- a/less/navigation.less
+++ b/less/navigation.less
@@ -6,6 +6,9 @@
     flex-direction: column;
     align-items: center;
     align-content: center;
+    position: fixed;
+    top: 0;
+    width: 100%;
     h1 {
       font-size: 4rem;
       margin: 1rem auto;
@@ -19,4 +22,8 @@
         margin: auto 1.6rem;
       }
     }
+  }
+
+  .underNav {
+      height: 10rem;
   }
