--- a/less/mixins.less
+++ b/less/mixins.less
@@ -12,6 +12,12 @@
 }
 
 .margins-mobile() {
-    width: 85%;
+    width: 100%;
     margin: auto;
+}
+
+.flexy() {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
 }
