--- a/less/blog-page.less
+++ b/less/blog-page.less
@@ -28,27 +28,9 @@
       height: 100%;
 
       @media(max-width: @mobile) {
-        .margins-mobile();
+        width: 100%;
+        margin: auto;
       } 
-    }
-  }
-
-
-  .sky, .launch {
-    @media(max-width: @mobile) {
-      display: none;
-    } 
-  }
-
-  .visit-planets {
-    padding: 15px;
-
-    h3 {
-      margin-top: 11px;
-    }
-
-    p {
-      margin-top: 13px;
     }
   }
 
@@ -62,6 +44,7 @@
     @media(max-width: @mobile) {
       width: 100%;
       flex-direction: column-reverse;
+      padding: 15px;
     }  
 
     .walk-text {
@@ -83,8 +66,9 @@
       .btn {
         .button(10rem, 3.5rem, 2rem);
         @media(max-width: @mobile) {
-          .margins-mobile();
+          width: 100%;
           height: 20%;
+          margin: auto;
         } 
       }
 
@@ -99,7 +83,8 @@
       margin-left: 4%;
       
       @media(max-width: @mobile) {
-        .margins-mobile();
+        width: 100%;
+        margin: auto;
       } 
 
       img {
@@ -108,10 +93,5 @@
         border-radius: 10px;
       }
     }
-
-    .sign-up {
-      margin-bottom: 3rem;
-    }
-
   }
 }// home
