--- a/less/navigation.less
+++ b/less/navigation.less
@@ -20,6 +20,17 @@
         color: #23293B;
         font-size: 1.5rem;
         margin: auto 1.6rem;
+        transition: background-color 2s;
+        border-radius: 3rem;
+        transition: padding 2s;
+        transition: color 2s
+      }
+
+      a:hover {
+        background-color: #23293B;
+        border-radius: 2rem;
+        padding: 1rem;
+        color: cyan;
       }
     }
   }
