--- a/less/blog-page.less
+++ b/less/blog-page.less
@@ -45,6 +45,8 @@
       width: 100%;
       flex-direction: column-reverse;
       padding: 15px;
+
+      
     }  
 
     .walk-text {
@@ -93,5 +95,14 @@
         border-radius: 10px;
       }
     }
+
+    .walk-img {
+      .rev {
+        width: 43%;
+        margin-left: 0;
+        margin-right: 4%;
+      }
+    }
+
   }
 }// home
