--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,7 +1,7 @@
 // Navigation code here
 
 .content-nav {
-    background-color: cyan;
+   background-color: rgba(78, 255, 255, .7);
     display: flex;
     flex-direction: column;
     align-items: center;
