Update button margins for mobile
Co-Authored-By: JustinDavisA <JustinDavisA@Gmail.com>

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -83,7 +83,7 @@
       .btn {
         .button(10rem, 3.5rem, 2rem);
         @media(max-width: @mobile) {
-          .margins-mobile();
+   padding: 15px 43%;
           height: 20%;
         } 
       }
