Update btnWidth/btnHeight to btnPadding
Co-Authored-By: JustinDavisA <JustinDavisA@Gmail.com>

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,6 +1,6 @@
 // Mixins Here
 
-.button(@btnWidth, @btnHeight, @btnTxtSize) {
+.button(@btnPadding, @btnTxtSize) {
     border: none;
     color: white;
     background-color: #23293B;
