Update instance of btnWidth to btnPadding
Co-Authored-By: JustinDavisA <JustinDavisA@Gmail.com>

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -4,7 +4,7 @@
     border: none;
     color: white;
     background-color: #23293B;
-    width: @btnWidth;
+    padding: @btnPadding;
     height: @btnHeight;
     font-size: @btnTxtSize;
     border-radius: 0.5rem;
