Update remove .btn
Co-Authored-By: JustinDavisA <JustinDavisA@Gmail.com>

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -80,7 +80,7 @@
         margin-bottom: 26px;
       }
 
-      .btn {
+      a {
         .button(10rem, 3.5rem, 2rem);
         @media(max-width: @mobile) {
    padding: 15px 43%;
